<resources>
    <string name="app_name">通道监控</string>
    <string name="string_cable_video">电缆通道监控</string>
    <string name="string_refresh">刷新</string>
    <string name="string_alarm">报警</string>

    <string name="string_login_title">智能防外破登录</string>
    <string name="action_sign_in">登录</string>
    <string name="string_user">请输入用户名</string>
    <string name="string_user_password">请输入密码</string>
    <string name="action_check_remeber_pwd">记住密码</string>
    <string name="error_field_required">请输入有效信息</string>
    <string name="string_devlist">设备列表</string>
    <string name="error_login_failed">登录失败，请检查用户名和密码</string>
    <string name="login_success">登录成功</string>
    <string name="upload_failed">网络错误</string>
    <string name="upload_success">音频文件上传成功</string>
    <string name="string_mqtt_success">喊话指令已下达</string>
    <string name="string_capture">抓拍</string>
    <string name="string_speech">喊话</string>

    <string name="string_capture_success">已抓拍,请于30s后刷新页面查看最新抓拍图片</string>
    <string name="string_capture_failed">抓拍指令未下达</string>
    <string name="string_alm_count">今日报警%1$s次</string>
    <string name="string_loadmore">加载更多...</string>


</resources>
