<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    android:background="@drawable/loginbackground"
    >

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:clickable="true"
            android:layout_marginRight="40dp">

            <TextView
                android:id="@+id/loginHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_login_title"
                android:textColor="#ffffffff"
                android:textSize="24sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="90dp"
                />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginHeader"
                android:theme="@style/CustomAppTheme_textinputLayout"
                android:layout_marginTop="70dp">



                <AutoCompleteTextView
                    android:id="@+id/user_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_user"
                    android:textColorHint="@color/White"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/White"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTextInputLayout"
                android:theme="@style/CustomAppTheme_textinputLayout"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_user_password"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="@color/White"
                    android:textColor="@color/White"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_below="@id/passwordTextInputLayout"
                android:layout_marginTop="10dp"
                android:theme="@style/MyCheckBox"
                android:text="@string/action_check_remeber_pwd"
                android:textColor="#ffffff" />


            <Button
                android:id="@+id/login_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/checkbox"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_white_corner"
                android:text="@string/action_sign_in"
                android:textSize="20sp"
                android:textColor="@color/appGreenColor" />


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>